--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="style.css" type="text/css" rel="stylesheet"/>
-  <script src="main.js">
+  <link href="css/style.css" type="text/css" rel="stylesheet"/>
+  <script src="js/game.js">
   $('div.div1').click(function(){
     GetContent("xxx");
   });
