--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <script>
   function make_move(element){
     // console.log(element.id[3]-1);
-    console.log(CURRENT_PLAYER);
+    // console.log(CURRENT_PLAYER);
     if(CURRENT_PLAYER=="X"){
       document.getElementById("p_o").innerHTML = "";
       document.getElementById("p_x").innerHTML = "Player O turn";
@@ -57,7 +57,6 @@
       document.getElementById("p_x").innerHTML = "";
       document.getElementById("p_o").innerHTML = "Player X turn";
     }
-    document.getElementById(element.id).innerHTML = "<p style='padding-top: 0px;'>" + CURRENT_PLAYER + "</p>";
     // document.getElementById(element.id).style.color = "blue";
     // document.getElementById(element.id).style.fontFamily = "Arial";
     // document.getElementById(element.id).style.fontSize = "larger";
